--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,13 @@
 body {
   background-color: #005dff;
 }
+
+.container {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 1em;
+  grid-auto-rows: minmax(100px, auto);
+  -ms-grid-columns: (1fr)[5];
+      grid-template-columns: repeat(5, 1fr);
+}
 /*# sourceMappingURL=main.css.map */
