--- a/css/main.scss
+++ b/css/main.scss
@@ -18,11 +18,17 @@ body {
     display:grid;
     grid-gap:1em;
     grid-auto-rows: minmax(100px,auto);
-    grid-template-columns:repeat(5, 1fr);
+    grid-template-columns:repeat(3, 1fr);
 }
+      .main{
+   grid-column: 2/4;
+ }   
 
-// .grid{
-//     display:grid;
-//     grid-auto-rows: minmax(100px,auto);
-//     grid-template-columns:repeat(5, 1fr);
-// }
+.r{
+    grid-column: 1/2;
+    justify-self: center; 
+}
+ 
+.a{
+    grid-column: 3/4;
+}
