--- a/css/main.scss
+++ b/css/main.scss
@@ -4,14 +4,18 @@ $colors:(
 
 );
 
-@function color($color-name){
-    @return map-get($colors,$color-name)
+// @function color($color-name){
+//     @return map-get($colors,$color-name)
+// }
+
+html{
+    background: url(../images/back.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-
-body {
-    background-color:color(primary);
-}
 
 // CSS GRID // 
 .container{
@@ -32,3 +36,4 @@ body {
 .a{
     grid-column: 3/4;
 }
+
