--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,12 @@ html {
 }
 
 .main {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  color: #ffff;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .r {
@@ -24,11 +27,24 @@ html {
   grid-column: 1/2;
   -ms-grid-column-align: center;
       justify-self: center;
+  color: #ffff;
+  font-size: 4em;
+  letter-spacing: .5em;
+  text-orientation: sideways;
+  margin-left: 150px;
 }
 
 .a {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  color: #ffff;
+}
+
+.vertical-text {
+  -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+  -webkit-transform-origin: right left 0;
+          transform-origin: right left 0;
 }
 /*# sourceMappingURL=main.css.map */
