--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,11 @@
 $colors:(
-    primary: #005dff,
-    accent: #fff6bb,
-
+    primary: #ffff,
+    accent: rgb(201, 197, 197),
 );
 
-// @function color($color-name){
-//     @return map-get($colors,$color-name)
-// }
+@function color($color-name){
+    @return map-get($colors,$color-name)
+ }
 
 html{
     background: url(../images/back.jpg) no-repeat center center fixed;
@@ -25,15 +24,27 @@ html{
     grid-template-columns:repeat(3, 1fr);
 }
       .main{
-   grid-column: 2/4;
+   grid-column: 1/4;
+   color:color(primary);
+    justify-self: center
  }   
 
 .r{
     grid-column: 1/2;
     justify-self: center; 
+    color:color(primary);
+    font-size: 4em;
+    letter-spacing: .5em;
+    text-orientation:sideways;
+    margin-left: 150px;
 }
  
 .a{
     grid-column: 3/4;
+    color:color(primary);
 }
 
+.vertical-text{
+    transform: rotate(270deg);
+	transform-origin: right left 0;
+}
