--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,8 @@ $colors:(
     @return map-get($colors,$color-name)
  }
 
+$margin-top:2em;
+
 html{
     background: url(../images/back.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -37,11 +39,13 @@ html{
     letter-spacing: .5em;
     text-orientation:sideways;
     margin-left: 150px;
+    // margin:$margin-top;
 }
  
 .a{
     grid-column: 3/4;
     color:color(primary);
+    // margin:$margin-top;
 }
 
 .vertical-text{
