pre-content add save

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html {
   background-size: cover;
 }
 
-.container {
+.container header {
   display: -ms-grid;
   display: grid;
   grid-gap: 1em;
@@ -12,16 +12,17 @@ html {
       grid-template-columns: repeat(3, 1fr);
 }
 
-.main {
+.container header .main {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
   color: #ffff;
   -ms-grid-column-align: center;
       justify-self: center;
+  letter-spacing: .2em;
 }
 
-.r {
+.container header .r {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
@@ -32,19 +33,17 @@ html {
   letter-spacing: .5em;
   text-orientation: sideways;
   margin-left: 150px;
-}
-
-.a {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  color: #ffff;
-}
-
-.vertical-text {
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
   -webkit-transform-origin: right left 0;
           transform-origin: right left 0;
+}
+
+.container header .a {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  color: #ffff;
+  letter-spacing: 1px;
 }
 /*# sourceMappingURL=main.css.map */
