--- a/css/main.scss
+++ b/css/main.scss
@@ -19,36 +19,35 @@ html{
 
 
 // CSS GRID // 
-.container{
+.container header{
     display:grid;
     grid-gap:1em;
     grid-auto-rows: minmax(100px,auto);
     grid-template-columns:repeat(3, 1fr);
-}
-      .main{
-   grid-column: 1/4;
-   color:color(primary);
-    justify-self: center
- }   
 
-.r{
-    grid-column: 1/2;
-    justify-self: center; 
-    color:color(primary);
-    font-size: 4em;
-    letter-spacing: .5em;
-    text-orientation:sideways;
-    margin-left: 150px;
-    // margin:$margin-top;
-}
- 
-.a{
-    grid-column: 3/4;
-    color:color(primary);
-    // margin:$margin-top;
-}
-
-.vertical-text{
-    transform: rotate(270deg);
-	transform-origin: right left 0;
-}
+    .main{
+        grid-column: 1/4;
+        color:color(primary);
+        justify-self: center;
+         letter-spacing:.2em;
+    }
+    .r{
+        grid-column: 1/2;
+        justify-self: center; 
+        color:color(primary);
+        font-size: 4em;
+         letter-spacing: .5em;
+        text-orientation:sideways;
+         margin-left: 150px;
+         // margin:$margin-top;
+         transform: rotate(270deg);
+         transform-origin: right left 0;
+    }
+    .a{
+        grid-column: 3/4;
+        color:color(primary);            
+        // margin:$margin-top;
+         letter-spacing:1px;
+        }
+    }
+    
