--- a/css/main.css
+++ b/css/main.css
@@ -60,16 +60,13 @@ main h1 {
 }
 
 .bg-header {
-  background-image: url("/images/back.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("/images/back.jpg") no-repeat center center;
   background-size: cover;
+  padding-bottom: 500px;
 }
 
 .bg-main {
-  background-image: url("/images/jcole.jpg");
-  background-position: top;
-  background-repeat: no-repeat;
+  background: url("/images/jc3.jpg") no-repeat;
   background-size: cover;
 }
 /*# sourceMappingURL=main.css.map */
