--- a/css/main.css
+++ b/css/main.css
@@ -26,17 +26,14 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-column: 1/2;
-  -ms-grid-column-align: center;
-      justify-self: center;
+  -ms-grid-column-align: end;
+      justify-self: end;
   color: #ffff;
   font-size: 4em;
   letter-spacing: .5em;
   text-orientation: sideways;
-  margin-left: 150px;
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
-  -webkit-transform-origin: right left 0;
-          transform-origin: right left 0;
 }
 
 .container header .a, .container main .a {
