--- a/css/main.scss
+++ b/css/main.scss
@@ -36,15 +36,13 @@ body{
     }
     .r{
         grid-column: 1/2;
-        justify-self: center; 
+        justify-self:end;
         color:color(primary);
         font-size: 4em;
          letter-spacing: .5em;
         text-orientation:sideways;
-         margin-left: 150px;
-         
          transform: rotate(270deg);
-         transform-origin: right left 0;
+         
     }
     .a{
         grid-column: 3/4;
