--- a/css/main.scss
+++ b/css/main.scss
@@ -16,63 +16,24 @@ $margin-top:2em;
 //   -o-background-size: cover;
 //   background-size: cover;
 // }
+
+*{border:1px solid white;}
 body{
     margin:0px;
     padding:0px;
 }
 
-// CSS GRID // 
-.container header ,.container main{
-    display:grid;
-    grid-gap:1em;
-    grid-auto-rows: minmax(150px,auto);
-    grid-template-columns:repeat(3, 1fr);
-
-    .main{
-        grid-column: 1/4;
-        color:color(primary);
-        justify-self: center;
-         letter-spacing:.2em;
-    }
-    .r{
-        grid-column: 1/2;
-        justify-self:end;
-        color:color(primary);
-        font-size: 4em;
-         letter-spacing: .5em;
-        text-orientation:sideways;
-         transform: rotate(270deg);
-         
-    }
-    .a{
-        grid-column: 3/4;
-        color:color(primary);            
-        
-         letter-spacing:1px;
-        }
-    }
+// FLEX BODXY // 
+.container {
+    display:flex;
+    flex-flow:row wrap;
+    color:white;
     
-     main{
-        h1, p{
-            color:color(primary);
-        }
-        h1{
-            grid-column: 1/4;
-            justify-self: center;
-        }
-  
-     }
-     .bg-header { background: url("/images/back.jpg") no-repeat center center; 
-        -webkit-background-size: cover;
-       -moz-background-size: cover;
-      -o-background-size: cover;    
-        background-size: cover; 
-        width:100vw;
-        height:100vh;
-        
-            
+   
+
+           
     }
-     .bg-main{ background: url("/images/jc3.jpg") no-repeat  ;
+     .bg-main{ background: url("") no-repeat  ;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;    
@@ -81,5 +42,15 @@ body{
         height:100vh;
         
         
-       
+          
+     }
+     .container { background: url("/images/bg.jpg") no-repeat center center; 
+        -webkit-background-size: cover;
+       -moz-background-size: cover;
+      -o-background-size: cover;    
+        background-size: cover; 
+        width:100vw;
+        height:100vh;
+        
+ 
      }
